2002-03-21  William M. Perry  <wmperry@gnu.org>

	* event-gtk.c (emacs_gtk_force_event_pending): Bogus definition
	that does nothing right now.
	(reinit_vars_of_event_gtk): Register a force_event_pending
	handler.  This seems to cure the crashes at startup caused by the
	progress bar.

2002-03-21  Malcolm Purvis  <malcolmpurvis@optushome.com.au>

	* event-gtk.c (emacs_gtk_format_magic_event):  Fixed compilation
	typos.

2002-03-20  Ben Wing  <ben@xemacs.org>

	* chartab.c:
	* chartab.c (Fcheck_category_at):
	* chartab.c (Fchar_in_category_p):
	Fix bugs in implementation and doc strings.
	
	* config.h.in (type_checking_assert_at_line):
	Add foo_checking_assert_at_line() macros.  Not clear whether these
	are actually useful, though; I'll take them out if not.

	* symsinit.h:
	* emacs.c:
	* emacs.c (main_1):
	Some improvements to the timeline.  Rearrange a bit the init
	calls.  Add call for reinit_vars_of_object_mswindows() and
	declare in symsinit.h.
	
	* event-Xt.c:
	* event-Xt.c (emacs_Xt_format_magic_event):
	* event-Xt.c (describe_event_window):
	* event-Xt.c (describe_event):
	* event-Xt.c (emacs_Xt_event_handler):
	* event-Xt.c (reinit_vars_of_event_Xt):
	* event-gtk.c:
	* event-gtk.c (emacs_gtk_format_magic_event):
	* event-gtk.c (reinit_vars_of_event_gtk):
	* event-msw.c:
	* event-msw.c (emacs_mswindows_format_magic_event):
	* event-msw.c (reinit_vars_of_event_mswindows):
	* event-stream.c:
	* event-stream.c (event_stream_operation):
	* event-stream.c (check_event_stream_ok):
	* event-stream.c (event_stream_handle_magic_event):
	* event-tty.c:
	* event-tty.c (emacs_tty_format_magic_event):
	* event-tty.c (reinit_vars_of_event_tty):
	* events.c:
	* events.c (event_equal):
	* events.c (event_hash):
	* events.c (format_event_object):
	* events.h:
	* events.h (struct event_stream):
	* events.h (union magic_data):

	Introduce new event methods for printing, comparing, and hashing
	magic events, to avoid event-type-specific stuff that had crept